--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 src/motion/opticalFlow.json filter=lfs diff=lfs merge=lfs -text
+src/workflow/signatures/opticalFlow.json filter=lfs diff=lfs merge=lfs -text
